--- a/custom_components/mqtt_basic_sync/manifest.json
+++ b/custom_components/mqtt_basic_sync/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "mqtt_basic",
+  "domain": "mqtt_basic_sync",
   "name": "MQTT Basic Example",
   "documentation": "https://github.com/home-assistant/example-custom-config/tree/master/custom_components/mqtt_basic/",
   "dependencies": ["mqtt"],
