Add version to manifest files

--- a/custom_components/detailed_hello_world_push/manifest.json
+++ b/custom_components/detailed_hello_world_push/manifest.json
@@ -8,5 +8,6 @@
   "zeroconf": [],
   "homekit": {},
   "dependencies": [],
-  "codeowners": ["@sillyfrog"]
+  "codeowners": ["@sillyfrog"],
+  "version": "0.1.0"
 }
