--- a/custom_components/mqtt_basic_sync/manifest.json
+++ b/custom_components/mqtt_basic_sync/manifest.json
@@ -4,5 +4,6 @@
   "documentation": "https://github.com/home-assistant/example-custom-config/tree/master/custom_components/mqtt_basic/",
   "dependencies": ["mqtt"],
   "codeowners": [],
-  "requirements": []
+  "requirements": [],
+  "version": "0.1.0"
 }
