--- a/custom_components/example_sensor/manifest.json
+++ b/custom_components/example_sensor/manifest.json
@@ -4,5 +4,6 @@
   "documentation": "https://github.com/home-assistant/example-custom-config/tree/master/custom_components/example_sensor/",
   "dependencies": [],
   "codeowners": [],
-  "requirements": []
+  "requirements": [],
+  "version": "0.1.0"
 }
