--- a/custom_components/example_light/manifest.json
+++ b/custom_components/example_light/manifest.json
@@ -5,5 +5,6 @@
   "dependencies": [],
   "codeowners": [],
   "requirements": ["awesomelights==1.2.3"],
+  "iot_class": "local_polling",
   "version": "0.1.0"
 }
