--- a/custom_components/detailed_hello_world_push/manifest.json
+++ b/custom_components/detailed_hello_world_push/manifest.json
@@ -1,14 +1,14 @@
 {
   "domain": "detailed_hello_world_push",
   "name": "Detailed Hello World Push",
+  "codeowners": ["@sillyfrog"],
   "config_flow": true,
+  "dependencies": [],
   "documentation": "https://www.home-assistant.io/integrations/detailed_hello_world_push",
+  "homekit": {},
+  "iot_class": "local_push",
   "requirements": [],
   "ssdp": [],
-  "zeroconf": [],
-  "homekit": {},
-  "dependencies": [],
-  "codeowners": ["@sillyfrog"],
-  "iot_class": "local_push",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "zeroconf": []
 }
